@@ -6,6 +6,8 @@
 * [Bug 3467] Potential memory fault in ntpq [...] <perlinger@ntp.org>
   - fixed IO redirection and CTRL-C handling in ntq and ntpdc
 * [Bug 3465] Default TTL values cannot be used <perlinger@ntp.org>
+* [Bug 3461] refclock_shm.c: clear error status on clock recovery <perlinger@ntp.org>
+  - initial patch by Hal Murray; also fixed refclock_report() trouble
 * [Bug 3456] Use uintptr_t rather than size_t to store an integer in a pointer
   - According to Brooks Davis, there was only one location <perlinger@ntp.org>
 * [Bug 2821] minor build issues <perlinger@ntp.org>
